# synthfin-trading-bench

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
bench/: __init__.py  config.py  corpus.py  leaderboard.py  observation.py  runner.py  schema.py  scoring.py  simulator.py
bench/agents/: __init__.py  base.py  baselines.py  llm.py  prompt.py
configs/: baselines_1000x10.yaml  claude_1000x10.yaml  default.yaml  full_1000x10.yaml  gemini_1000x10.yaml  openai_1000x10.yaml  validation_50x10.yaml  xai_1000x10.yaml
data/: README.md
docs/: CONTAMINATION.md  CORPUS_LICENSE.md  DATA_CARD.md  LEADERBOARD.md  METHODOLOGY.md  PUBLISHING.md  hf_dataset_card.md
scripts/: build_site.py  hash_corpus.py  make_subset.py  upload_to_hf.py
site/: index.html
tests/: test_bench.py
